# coffer-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/coffer/: __init__.py  _config.py
tests/: conftest.py  test_config.py
