[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coffer-config"
version = "0.1.0"
description = "Typed config reader for resolved Coffer config files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Suleman" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "types-PyYAML", "pre-commit"]

[project.urls]
Repository = "https://github.com/sul/coffer-py"
Issues = "https://github.com/sul/coffer-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coffer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["SIM108"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
