[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coffer-config"
version = "0.2.0"
description = "Typed config reader for resolved Coffer config files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["config", "configuration", "yaml", "json", "typed", "type-safe", "settings"]
authors = [{ name = "Suleman" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "types-PyYAML", "pre-commit"]

[project.urls]
Repository = "https://github.com/sultano/coffer-py"
Issues = "https://github.com/sultano/coffer-py/issues"
Changelog = "https://github.com/sultano/coffer-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/coffer"]
artifacts = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=coffer --cov-fail-under=90"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["SIM108"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
